--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -11,6 +11,7 @@ djangorestframework = "*"
 psycopg2 = "*"
 django-heroku = "*"
 dj-database-url = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.8"
